--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-"h2 { color: black; }" 
-"h2 { color:red; }" 
-"h2 { color: green; }"
-"h2 { color: purple; }"
-"h3 {color: green;}" 
+h2 { color: black; } 
+h2 { color:red; } 
+h2 { color: green; }
+h2 { color: purple; }
+h3 {color: green;} 
